# Sp3ctra

./: .gitignore  CISYNTH_noGUI.kicad_prl  CISYNTH_noGUI.kicad_pro  CISYNTH_noGUI.pro  COMMIT_REDATE_INSTRUCTIONS.md  FFT_to_polyphonic_MIGRATION.md  FFT_to_polyphonic_report.csv  IFFT_to_additive_report.csv  MIGRATION.md  Makefile  README.md  VST_Migration_Plan.md  additive_synth.ini  build_mac_debug.sh  build_mac_release.sh  calculate_volume_increment  calculate_volume_increment.c  dmx_libftdi_fixed.c  midi_mapping.ini  midi_params.ini  requirements.txt  sp3ctra.ini  sp3ctra_origin.ini  sp3ctra_uncommitted.diff  test_color_inversion.c  test_debug_oscillators.sh  test_dmx_flexible.c  test_dmx_simple  test_dmx_simple.c  test_stereo_logic.c  test_synthesis_modes.c
.clinerules/: custom_instructions.md
.clinerules/workflows/: workflow.md
.personalFiles/PRE/: midi_mapping.ini  midi_params.ini  sp3ctra.ini
Max/: testBlackHole.maxpat
config/: midi_parameters_defaults.ini
docs/: ADDITIVE_SYNTHESIS_REFACTORING.md  ADDITIVE_VOLUME_MASTER_CONTROL_FIX.md  AUDIO_BUFFER_SYNC_FIX.md  CLEANUP_REFACTORING_PLAN.md  CLEANUP_STATUS.md  CODE_REVIEW.md  CONFIGURATION_RUNTIME.md  CONFIG_REDUNDANCY_ELIMINATION.md  CORE_AUDIO_CLEANUP.md  DEBUG_GUIDE_VSCODE.md  DISPLAY_BIDIRECTIONAL_BEHAVIOR_EXPLAINED.md  DISPLAY_BIDIRECTIONAL_IMPLEMENTATION_COMPLETE.md  DISPLAY_BIDIRECTIONAL_SCROLL.md  DISPLAY_BIDIRECTIONAL_SYMMETRIC_SCROLL.md  DISPLAY_CONTINUOUS_SCROLL_FIX.md  DISPLAY_SCROLL_SPEED_FIX.md  DISPLAY_SHUTDOWN_FIX.md  DISPLAY_SYSTEM_SPECIFICATION.md  DISPLAY_THIN_LINE_BIDIRECTIONAL_FIX.md  HTML_EXPORT_CHARTER.md  IMAGE_SEQUENCER_SPECIFICATION.md  IMU_ATTITUDE_COMPENSATION.md  IMU_DIRECT_ACCELERATION_CONTROL.md  IMU_GESTURE_SYSTEM.md  IMU_SPATIAL_TRANSLATION_FIX.md  LUXSYNTH_SHUTDOWN_FIX.md  MACOS_RT_PRIORITIES.md  MIDI_IMPLEMENTATION_GAP_ANALYSIS.md  MIDI_IMPLEMENTATION_STATUS.md  MIDI_SYSTEM_SPECIFICATION.md  MULTICAST_UDP_SUPPORT.md  MULTI_CHANNEL_RAW_OUTPUTS.md  OPTIMIZATION_PHASE2_ANALYSIS.md  OPTIMIZATION_PHASE3_ANALYSIS.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PHOTOWAVE_BUFFER_TIMEOUT_FIX.md  PHOTOWAVE_DUPLICATE_NOTE_OFF_FIX.md  PHOTOWAVE_NOTE_OFF_ACTIVE_FLAG_FIX.md  PHOTOWAVE_NOTE_OFF_FIX.md  PHOTOWAVE_NOTE_OFF_RACE_CONDITION_FIX.md  (+28 more)
docs/diagrams/: README.md  additive_synthesis_architecture.puml  additive_synthesis_signal_flow.puml  additive_synthesis_threading.puml
docs/raspberry/: AUTOSTART_SERVICE_SETUP.md  DMX_SETUP_COMPLETE.md  NETWORK_SETUP.md  REALTIME_AUDIO_LATENCY_FIX.md  SETUP_RASPBERRY_PI_SSHFS.md  SSH_CONNECTION_GUIDE.md  USB_AUDIO_SETUP_COMPLETE.md
resources/: Info.plist  Sp3ctra.entitlements
scripts/: activate_rt_deterministic.sh  auto_redate_work_hours.sh  build_vst.sh  cleanup_includes.sh  git_redate_commits.sh  run_standalone.sh  udp_listener_test.py
scripts/code_review/: .clang-tidy  PROMPTS_FOR_LLM.md  README.md  SETUP_LLM.md  activate_env.sh  agent_ai_bias.py  agent_architecture.py  agent_duplication.py  agent_llm_semantic.py  agent_metrics.py  agent_static_analysis.py  agent_ui_consistency.py  run_code_review.py  run_review.sh  setup_environment.sh
scripts/code_review/reports/: CONSOLIDATED_REPORT.txt  ai_bias_detection_report.txt  architecture_review_report.txt  code_duplication_report.txt  code_metrics_report.txt  llm_semantic_analysis_report.txt  llm_semantic_report.txt  semantic_analysis_vst.md  static_analysis_report.txt  summary.json  (+1 more)
scripts/docs/: README.md  convert_md.sh  md_to_html.py
scripts/raspberry/: 99-sp3ctra-dmx.rules  asound_spdif_advanced.conf  fix_pi_realtime_audio.sh  install_dependencies_raspberry.sh  install_dmx_udev.sh  realtime_audio.sh  setup_ethernet.sh  setup_network.sh  setup_wifi.sh  test_dmx_baudrate.sh  test_dmx_libftdi_fixed.sh  test_usb_audio_devices.sh
scripts/refactor/: README.md  apply_lux_content_changes.sh  rename_to_lux.sh
src/config/: config_audio.h  config_debug.h  config_display.h  config_display_loader.c  config_display_loader.h  config_dmx.h  config_instrument.h  config_loader.c  config_loader.h  config_loader_old.c  config_luxwave.h  config_parser_table.h  config_photowave.h  config_synth_additive.h  config_synth_luxstral.h  config_synth_luxsynth.h  config_synth_poly.h
src/core/: ZitaRev1.cpp  ZitaRev1.h  ZitaRev1_original.h  audio_c_interface.cpp  audio_c_interface.h  audio_rtaudio.cpp  auto_volume.c  auto_volume.h  config.h  context.h  display.c  display_globals.c  display_globals.h  main.c  midi_controller.cpp  multithreading.c  reverb.cpp  synth.c  synth_fft.c
src/debug/: audio_diagnostic.c
src/display/: display.c  display.h  display_buffer.c  display_buffer.h
src/processing/: image_preprocessor.c  image_preprocessor.h  image_sequencer.c  image_sequencer.h  imu_gesture.c  imu_gesture.h
src/threading/: multithreading.c  multithreading.h
src/utils/: image_debug.c  image_debug.h  image_debug_stubs.h  logger.c  logger.h  rt_profiler.c  rt_profiler.h  shared.c  shared.h  stb_image_write.h  stubs.c
vst/: AUDIO_QUALITY_FIXES.md  CMakeLists.txt  CODE_REVIEW_SUMMARY.md  DEBUGGING.md  NOTES_ARCHITECTURE.md  PLAN_CORRECTION.md  QUICKSTART.md  adapt_luxstral_includes.py  sp3ctra.ini
vst/source/: AudioProcessingThread.h  CisVisualizerComponent.cpp  CisVisualizerComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SettingsWindow.cpp  SettingsWindow.h  Sp3ctraConstants.h  Sp3ctraCore.cpp  Sp3ctraCore.h  UdpReceiverThread.h  global_stubs.c
vst/source/luxstral/: pow_approx.c  synth_luxstral.c  synth_luxstral.h  synth_luxstral_algorithms.c  synth_luxstral_algorithms.h  synth_luxstral_math.h  synth_luxstral_math_neon.c  synth_luxstral_runtime.c  synth_luxstral_state.c  synth_luxstral_state.h  synth_luxstral_stereo.c  synth_luxstral_stereo.h  synth_luxstral_threading.c  synth_luxstral_threading.h  synth_luxstral_threading_rt.c  vst_adapters.cpp  vst_adapters.h  vst_adapters_c.h  wave_generation.c  wave_generation.h
vst/source/settings/: GeneralSettingsTab.cpp  GeneralSettingsTab.h  LuxStralSettingsTab.cpp  LuxStralSettingsTab.h  NetworkSettingsTab.cpp  NetworkSettingsTab.h
(+74 files in other folders)
